--- a/exercise/c-simple-types/Cargo.toml
+++ b/exercise/c-simple-types/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "ding_machine"
+name = "sample_ludorg"
 version = "0.1.0"
-authors = ["Nathan Stocks <nathan.stocks@gmail.com>"]
+authors = ["Ludorg"]
 edition = "2018"
 
 [dependencies]
